--- a/po/ja.po
+++ b/po/ja.po
@@ -3,25 +3,27 @@
 # Japanese translations for exo package.
 # Copyright (C) 2004-2006 os-cillation e.K.
 # This file is distributed under the same license as the exo package.
-# Daichi Kawahata <daichi@xfce.org>, 2005.
+# Daichi Kawahata <daichi@xfce.org>, 2005-2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.1.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-19 17:57+0200\n"
-"PO-Revision-Date: 2006-05-01 21:45+0900\n"
+"PO-Revision-Date: 2006-05-04 22:56+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-cell-renderer-ellipsized-text.c:152
 #: ../exo/exo-ellipsized-label.c:122
 msgid "Ellipsize"
 msgstr "中略"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-cell-renderer-ellipsized-text.c:153
 msgid ""
 "The preferred place to ellipsize the string, if the cell renderer does not "
@@ -30,14 +32,17 @@ msgstr ""
 "セルレンダラーに全ての文字列を表示するだけの十分なスペースが無い場合や、まっ"
 "たく無い場合に文字列を省略する箇所です。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-cell-renderer-ellipsized-text.c:163
 msgid "Ellipsize set"
 msgstr "中略をセット"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-cell-renderer-ellipsized-text.c:164
 msgid "Whether this tag affects the ellipsize mode"
 msgstr "このタグが中略モードに影響を及ぼすかどうかを設定します。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-ellipsized-label.c:123
 msgid ""
 "The preferred place to ellipsize the string, if the label does not have "
@@ -46,135 +51,168 @@ msgstr ""
 "ラベルに全ての文字列を表示するだけの十分なスペースが無い場合や、まったく無い"
 "場合に文字列を省略する箇所です。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-bar.c:259 ../exo/exo-icon-view.c:791
 msgid "Orientation"
 msgstr "方向"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-bar.c:260
 msgid "The orientation of the iconbar"
 msgstr "アイコンバーが延びる方向です。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-bar.c:276 ../exo/exo-icon-view.c:808
 msgid "Pixbuf column"
 msgstr "ピクセルバッファ欄"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-bar.c:277 ../exo/exo-icon-view.c:809
 msgid "Model column used to retrieve the icon pixbuf from"
 msgstr "アイコンのピクセルバッファを取得するために使用されるモデル欄です。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-bar.c:292 ../exo/exo-icon-view.c:935
 msgid "Text column"
 msgstr "文字欄"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-bar.c:293 ../exo/exo-icon-view.c:936
 msgid "Model column used to retrieve the text from"
 msgstr "文字を取得するために使用されるモデル欄です。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-bar.c:305
 msgid "Icon Bar Model"
 msgstr "アイコンバーのモデル"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-bar.c:306
 msgid "Model for the icon bar"
 msgstr "アイコンバーのためのモデルです。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-bar.c:322
 msgid "Active"
 msgstr "アクティブ"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-bar.c:323
 msgid "Active item index"
 msgstr "有効アイテムのインデックス"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-bar.c:329 ../exo/exo-icon-bar.c:330
 msgid "Active item fill color"
 msgstr "有効アイテムの塗潰し色"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-bar.c:336 ../exo/exo-icon-bar.c:337
 msgid "Active item border color"
 msgstr "有効アイテムの枠の色"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-bar.c:343 ../exo/exo-icon-bar.c:344
 msgid "Active item text color"
 msgstr "有効アイテムの文字色"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-bar.c:350 ../exo/exo-icon-bar.c:351
 msgid "Cursor item fill color"
 msgstr "カーソル・アイテムの塗潰し色"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-bar.c:357 ../exo/exo-icon-bar.c:358
 msgid "Cursor item border color"
 msgstr "カーソル・アイテムの枠の色"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-bar.c:364 ../exo/exo-icon-bar.c:365
 msgid "Cursor item text color"
 msgstr "カーソル・アイテムの文字色"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:659
 msgid "Column Spacing"
 msgstr "表示欄スペース"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:660
 msgid "Space which is inserted between grid column"
 msgstr "グリッド欄の間に挟まれるスペースです。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:676
 msgid "Number of columns"
 msgstr "表示欄の数"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:677
 msgid "Number of columns to display"
 msgstr "表示する表示欄の数です。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:691
 msgid "Enable Search"
 msgstr "検索を有効にする"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:692
 msgid "View allows user to search through columns interactively"
 msgstr "表示欄をインタラクティブに検索できるようにします。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:709
 msgid "Width for each item"
 msgstr "アイテムの幅"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:710
 msgid "The width used for each item"
 msgstr "それぞれのアイテムに使用する幅です。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:728
 msgid "Layout mode"
 msgstr "レイアウトモード"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:729
 msgid "The layout mode"
 msgstr "レイアウトモードです。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:745
 msgid "Margin"
 msgstr "余白"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:746
 msgid "Space which is inserted at the edges of the icon view"
 msgstr "アイテム表示の端に挟まれるスペースです。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:762
 msgid "Markup column"
 msgstr "マークアップ欄"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:763
 msgid "Model column used to retrieve the text if using Pango markup"
 msgstr ""
 "Pango のマークアップが使用されている場合に文字を取得するためのモデル欄です。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:777
 msgid "Icon View Model"
 msgstr "アイコン表示モデル"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:778
 msgid "The model for the icon view"
 msgstr "アイコン表示のためのモデルです。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:792
 msgid ""
 "How the text and icon of each item are positioned relative to each other"
@@ -182,51 +220,62 @@ msgstr ""
 "それぞれのアイテムの文字とアイコンがお互いにどの位置に置かれるかを選択しま"
 "す。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:824
 msgid "Reorderable"
 msgstr "並べ替え可能"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:825
 msgid "View is reorderable"
 msgstr "表示は並べ替え可能です。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:840
 msgid "Row Spacing"
 msgstr "行スペース"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:841
 msgid "Space which is inserted between grid rows"
 msgstr "グリッド行の間に挟まれるスペースです。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:855
 msgid "Search Column"
 msgstr "検索欄"
 
-# FIXME: wtf
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:856
 msgid "Model column to search through when searching through item"
 msgstr "アイテムを検索する時に検索するモデル欄です。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:870
 msgid "Selection mode"
 msgstr "選択モード"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:871
 msgid "The selection mode"
 msgstr "選択モードです。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:886 ../exo/exo-tree-view.c:169
 msgid "Single Click"
 msgstr "シングルクリック"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:887 ../exo/exo-tree-view.c:170
 msgid "Whether the items in the view can be activated with single clicks"
 msgstr "表示されているアイテムを一回のクリックで有効にするかどうかです。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:903 ../exo/exo-tree-view.c:186
 msgid "Single Click Timeout"
 msgstr "シングルクリックのタイムアウト"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:904 ../exo/exo-tree-view.c:187
 msgid ""
 "The amount of time after which the item under the mouse cursor will be "
@@ -235,26 +284,32 @@ msgstr ""
 "シングルクリックモードの時にマウスカーソルの下にあるアイテムが自動的に選択状"
 "態になるまでの時間です。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:919
 msgid "Spacing"
 msgstr "スペース"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:920
 msgid "Space which is inserted between cells of an item"
 msgstr "アイテムのセルの間に挟まれるスペースです。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:943
 msgid "Selection Box Color"
 msgstr "選択ボックスの色"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:944
 msgid "Color of the selection box"
 msgstr "選択ボックスの色です。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:950
 msgid "Selection Box Alpha"
 msgstr "選択ボックスのα値"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-icon-view.c:951
 msgid "Opacity of the selection box"
 msgstr "選択ボックスの透明度です。"
@@ -322,42 +377,52 @@ msgstr "URL「%s」はサポートされていません"
 msgid "Failed to open \"%s\"."
 msgstr "「%s」を開くのに失敗しました。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-wrap-table.c:169
 msgid "Column spacing"
 msgstr "表示欄の間隔"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-wrap-table.c:170
 msgid "The amount of space between two consecutive columns"
 msgstr "二つの連続する表示欄の間隔です。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-wrap-table.c:184
 msgid "Row spacing"
 msgstr "表示列の間隔"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-wrap-table.c:185
 msgid "The amount of space between two consecutive rows"
 msgstr "二つの連続する表示列の間隔です。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-wrap-table.c:199
 msgid "Homogeneous"
 msgstr "均質性"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-wrap-table.c:200
 msgid "Whether the children should be all the same size"
 msgstr "子ウィンドウを全て同じサイズにするかどうかを指定します。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-xsession-client.c:152
 msgid "Window group"
 msgstr "ウィンドウグループ"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-xsession-client.c:153
 msgid "Window group leader"
 msgstr "ウィンドウグループのリーダーです。"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-xsession-client.c:163
 msgid "Restart command"
 msgstr "再起動コマンド"
 
+# NOTE: for xfconf-editor
 #: ../exo/exo-xsession-client.c:164
 msgid "Session restart command"
 msgstr "セッションを再起動するコマンドです。"
@@ -763,7 +828,7 @@ msgstr ""
 "Copyright (c) 2005-2006\n"
 "        os-cillation e.K. All rights reserved.\n"
 "\n"
-"Benedikt Meurer <benny@xfce.org> が作成しました。\n"
+"Benedikt Meurer <benny@xfce.org> が製作しました。\n"
 "\n"
 
 #: ../exo-open/main.c:121
