--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,6 @@
 2006-05-04  Daichi Kawahata <daichi@xfce.org>
 
+	* ja.po: Added a comment.
 	* pl.po: Updated Polish translations by Piotr Malinski
 	  <admin@rk.edu.pl>.
 
