Added Czech translations by Michal Varady <miko.vaji@gmail.com>.
(Old svn revision: 21483)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,7 @@
 2006-05-04  Daichi Kawahata <daichi@xfce.org>
 
+	* LINGUAS, cs.po: Added Czech translations by Michal Varady
+	  <miko.vaji@gmail.com>.
 	* *.po: Bump.
 	* ja.po: Added a comment.
 	* pl.po: Updated Polish translations by Piotr Malinski
