Import initial Japanese translations and related files.
(Old svn revision: 21488)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2006-05-04	Daichi Kawahata <daichi@xfce.org>
+
+	* Makefile.am, configure.in.in, docs/manual/Makefile.am,
+	  docs/manual/ja/Makefile.am,
+	  docs/manual/ja/exo-preferred-applications.xml.in,
+	  docs/manual/ja/images/Makefile.am,
+	  docs/manual/ja/images/exo-preferred-applications-internet.png,
+	  docs/manual/ja/images/exo-preferred-applications-utilities.png,
+	  docs/manual/ja/images/exo-preferred-applications-webbrowser-custom.png,
+	  docs/manual/ja/images/exo-preferred-applications-webbrowser-menu.png,
+	  po-doc/ChangeLog, po-doc/LINGUAS, po-doc/Makefile.am,
+	  po-doc/exo-preferred-applications.pot, po-doc/ja.po: Import
+	  initial Japanese translations and related files.
+
 2006-05-02	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c, exo/exo-url.c: Apply patches from Oliver
