--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-05  Daichi Kawahata <daichi@xfce.org>
+
+	* POTFILES.in; Added a missing file.
+	* libexo-0.3.pot, *.po: Updated.
+
 2006-05-04  Daichi Kawahata <daichi@xfce.org>
 
 	* LINGUAS, cs.po: Added Czech translations by Michal Varady
