--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,6 @@
 2006-05-05  Daichi Kawahata <daichi@xfce.org>
 
+	* ja.po: Updated Japanese translations.
 	* POTFILES.in; Added a missing file.
 	* libexo-0.3.pot, *.po: Updated.
 
