[l10n:eu] Basque translation update
(Old svn revision: 21507)

--- a/po/eu.po
+++ b/po/eu.po
@@ -407,7 +407,7 @@ msgstr ""
 "Copyright (c) 2005\n"
 "        os-cillation e.K. All rights reserved.\n"
 "\n"
-"Written by Benedikt Meurer <benny@xfce.org>.\n"
+"Benedikt Meurer-ek <benny@xfce.org> idatzia.\n"
 "\n"
 
 #: ../exo-csource/main.c:251 ../exo-open/main.c:103
@@ -613,12 +613,11 @@ msgstr "Botoi Etiketak|Hobetsitako Aplikazioak"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
-msgstr ""
+msgstr "HObetsitako Aplikazioa (Web Nabigatzailea, ePosta Bezero eta Terminal Emuladorea)"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:3
-#, fuzzy
 msgid "Xfce 4 Preferred Applications"
-msgstr "Hobetsitako Aplikazioak"
+msgstr "Xfce 4 Hobetsitako Aplikazioak"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.h:1
 msgid "Xfce Terminal"
