Finnish translations updated.
(Old svn revision: 21508)

--- a/po/fi.po
+++ b/po/fi.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.1.7svn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-05-05 18:28+0900\n"
-"PO-Revision-Date: 2006-04-20 17:41+0300\n"
+"POT-Creation-Date: 2006-05-05 13:22+0300\n"
+"PO-Revision-Date: 2006-05-05 13:24+0300\n"
 "Last-Translator: Jari Rahkonen <jari.rahkonen@pp1.inet.fi>\n"
 "Language-Team: os-cillation <info@os-cillation.com>\n"
 "MIME-Version: 1.0\n"
@@ -607,12 +607,11 @@ msgstr "Oletussovellukset"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
-msgstr ""
+msgstr "Oletussovellukset (web-selain, sähköposti ja pääteohjelma)"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:3
-#, fuzzy
 msgid "Xfce 4 Preferred Applications"
-msgstr "Oletussovellukset"
+msgstr "Xfce 4 Oletussovellukset"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.h:1
 msgid "Xfce Terminal"
