--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-05  Daichi Kawahata <daichi@xfce.org>
+
+	* cs.po: Updated Czech translations by Michal Varady
+	  <miko.vaji@gmail.com>.
+
 2006-05-05  Piarres Beobide <pi@beobide.net>
 
 	* eu.po: Updated Basque translation.
