--- a/po/cs.po
+++ b/po/cs.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.7svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-05 18:28+0900\n"
-"PO-Revision-Date: 2006-05-04 18:52+0100\n"
+"PO-Revision-Date: 2006-05-05 20:14+0100\n"
 "Last-Translator: Michal Várady <miko.vaji@gmail.com>\n"
 "Language-Team: Czech <translation-team-cs@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -62,7 +62,7 @@ msgstr "Sloupec pixbuf"
 
 #: ../exo/exo-icon-bar.c:277 ../exo/exo-icon-view.c:809
 msgid "Model column used to retrieve the icon pixbuf from"
-msgstr ""
+msgstr "Sloupec modelu používaný pro získání pixbufu ikony z"
 
 #: ../exo/exo-icon-bar.c:292 ../exo/exo-icon-view.c:935
 msgid "Text column"
@@ -70,7 +70,7 @@ msgstr "Textový sloupec"
 
 #: ../exo/exo-icon-bar.c:293 ../exo/exo-icon-view.c:936
 msgid "Model column used to retrieve the text from"
-msgstr ""
+msgstr "Sloupec modelu používaný pro získání textu z"
 
 #: ../exo/exo-icon-bar.c:305
 msgid "Icon Bar Model"
@@ -616,11 +616,12 @@ msgstr "Popis tlačítka|Upřednostňované aplikace"
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
 msgstr ""
+"Upřednostňované aplikace (webový prohlížeč, e-mailový klient a emulátor "
+"terminálu)"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:3
-#, fuzzy
 msgid "Xfce 4 Preferred Applications"
-msgstr "Upřednostňované aplikace"
+msgstr "Upřednostňované aplikace prostředí Xfce 4"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.h:1
 msgid "Xfce Terminal"
