--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-06  Benedikt Meurer <benny@xfce.org>
+
+	* libexo-0.3.pot, *.po: Updated.
+	* de.po: Update the german translations.
+
 2006-05-05  Daichi Kawahata <daichi@xfce.org>
 
 	* cs.po: Updated Czech translations by Michal Varady
