Greek translations update.
(Old svn revision: 21550)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-06  Stavros Giannouris <stavrosg2002@freemail.gr>
+
+	* el.po: Greek translation update.
+
 2006-05-06  Benedikt Meurer <benny@xfce.org>
 
 	* libexo-0.3.pot, *.po: Updated.
