--- a/po/el.po
+++ b/po/el.po
@@ -6,10 +6,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.1.7svn\n"
+"Project-Id-Version: exo 0.3.1.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-06 00:05+0200\n"
-"PO-Revision-Date: 2006-04-14 17:58+0200\n"
+"PO-Revision-Date: 2006-05-06 15:05+0200\n"
 "Last-Translator: Stavros Giannouris <stavrosg2002@freemail.gr>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
 "MIME-Version: 1.0\n"
@@ -436,7 +436,7 @@ msgstr "Προτιμώμενες εφαρμογές"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:101
 msgid "Select default applications for various services"
-msgstr ""
+msgstr "Επιλέξτε τις εξ ορισμού εφαρμογές για τις διάφορες υπηρεσίες"
 
 #.
 #. Internet
@@ -583,7 +583,7 @@ msgid ""
 "Browser now and click OK to proceed."
 msgstr ""
 "Παρακαλώ επιλέξτε τον περιηγητή ιστού που\n"
-"προτιμάτε και πιέστε ΟΚ για να προχωρήσετε."
+"προτιμάτε και πιέστε OK για να προχωρήσετε."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:286
 msgid ""
@@ -591,7 +591,7 @@ msgid ""
 "now and click OK to proceed."
 msgstr ""
 "Παρακαλώ επιλέξτε τον αναγνώστη αλληλογραφίας\n"
-"που προτιμάτε και πιέστε ΟΚ για να προχωρήσετε."
+"που προτιμάτε και πιέστε OK για να προχωρήσετε."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:288
 msgid ""
@@ -599,7 +599,7 @@ msgid ""
 "Emulator now and click OK to proceed."
 msgstr ""
 "Παρακαλώ επιλέξτε τον εξομοιωτή τερματικού\n"
-"που προτιμάτε και πιέστε ΟΚ για να προχωρήσετε."
+"που προτιμάτε και πιέστε OK για να προχωρήσετε."
 
 #: ../exo-helper/exo-helper.c:404
 msgid "No command specified"
@@ -614,18 +614,19 @@ msgid "Failed to launch exo-preferred-applications"
 msgstr "Η εκτέλεση του exo-preferred-applications απέτυχε"
 
 #: ../exo-helper/exo-preferred-applications-settings.c:60
-#, fuzzy
 msgid "Button Label|Preferred Applications"
-msgstr "Προτιμώμενες εφαρμογές"
+msgstr ""
+"Προτιμώμενες\n"
+"εφαρμογές"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
 msgstr ""
+"Προτιμώμενες εφαρμογές (περιηγητής, αναγνώστης αλληλογραφίας και τερματικό)"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:3
-#, fuzzy
 msgid "Xfce 4 Preferred Applications"
-msgstr "Προτιμώμενες εφαρμογές"
+msgstr "Προτιμώμενες εφαρμογές για το Xfce 4"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.h:1
 msgid "Xfce Terminal"
@@ -727,8 +728,7 @@ msgid ""
 msgstr ""
 "  --launch TYPE [ΠΑΡΑΜΕΤΡΟι...]       Εκτέλεση της προτιμώμενης εφαρμογής "
 "του\n"
-"                                      TYPE με τους προαιρετικούς "
-"ΠΑΡΑΜΕΤΡΟΥς,\n"
+"                                      TYPE με τις προαιρετικές ΠΑΡΑΜΕΤΡΟΥς,\n"
 "                                      όπου TYPE είναι ένα από τα παρακάτω."
 
 #: ../exo-open/main.c:53
