Updated Brazilian Portuguese translations.
(Old svn revision: 21551)

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -2,13 +2,14 @@
 # Copyright (C) 2004-2006 os-cillation e.K.
 # This file is distributed under the same license as the exo package.
 # Joao Pedrosa <joaopedrosa@gmail.com>, 2005.
+# Adriano Winter Bess <awbess@gmail.com>, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.1.7svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-06 00:05+0200\n"
-"PO-Revision-Date: 2006-04-15 17:23-0300\n"
+"PO-Revision-Date: 2006-05-06 14:16-0300\n"
 "Last-Translator: Adriano Winter Bess <awbess@gmail.com>\n"
 "Language-Team: os-cillation <info@os-cillation.com>\n"
 "MIME-Version: 1.0\n"
@@ -436,7 +437,7 @@ msgstr "Aplicações Preferidas"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:101
 msgid "Select default applications for various services"
-msgstr ""
+msgstr "Selecione aplicações padrão para vários serviços"
 
 #.
 #. Internet
@@ -611,18 +612,18 @@ msgid "Failed to launch exo-preferred-applications"
 msgstr "Falhou ao executar exo-preferred-applications"
 
 #: ../exo-helper/exo-preferred-applications-settings.c:60
-#, fuzzy
 msgid "Button Label|Preferred Applications"
 msgstr "Aplicações Preferidas"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
 msgstr ""
+"Aplicações Preferidas (Navegador Web, Leitor de E-mail, e Emulador de "
+"Terminal)"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:3
-#, fuzzy
 msgid "Xfce 4 Preferred Applications"
-msgstr "Aplicações Preferidas"
+msgstr "Aplicações Preferidas do Xfce 4"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.h:1
 msgid "Xfce Terminal"
@@ -769,16 +770,3 @@ msgstr "Falhou ao executar aplicação preferida para categoria \"%s\"."
 #, c-format
 msgid "Failed to open URL \"%s\"."
 msgstr "Falhou ao abrir a URL \"%s\"."
-
-#~ msgid ""
-#~ "Copyright (c) 2005\n"
-#~ "        os-cillation e.K. All rights reserved.\n"
-#~ "\n"
-#~ "Written by Benedikt Meurer <benny@xfce.org>.\n"
-#~ "\n"
-#~ msgstr ""
-#~ "Copyright (c) 2005\n"
-#~ "        os-cillation e.K. Todos os direitos reservados.\n"
-#~ "\n"
-#~ "Escrito por Benedikt Meurer <benny@xfce.org>.\n"
-#~ "\n"
