--- a/THANKS
+++ b/THANKS
@@ -16,32 +16,57 @@ Translators (sorted by language):
 ----------------------------------
 These people have translated libexo to foreign languages.
 
-Pau Rul·lan Ferragut <paurullan@bulma.net>
- * ca translations
+ Pau Rul·lan Ferragut <paurullan@bulma.net>
+  * ca translations
 
-Stavros Giannouris <stavrosg2002@freemail.gr>
- * el translations
+ Michal Várady <miko.vaji@gmail.com>
+  * cs translations
 
-Dwayne Bailey <dwayne@translate.org.za>
- * en_GB translations
+ Stavros Giannouris <stavrosg2002@freemail.gr>
+  * el translations
 
-Patricio Carr <pato@patocarr.com>
- * es translations
+ Dwayne Bailey <dwayne@translate.org.za>
+  * en_GB translations
 
-Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
- * fi translations
+ Patricio Carr <pato@patocarr.com>
+  * es translations
 
-Stephane Roy <sroy@j2n.net>
- * fr translations
+ Peeter Vois <peeter.vois@proekspert.ee>
+  * et translations
+ 
+ Piarres Beobide <pi@beobide.net>
+  * eu translations
 
-Daichi Kawahata <daichik@users.sourceforge.net>
- * ja translations
+ Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
+  * fi translations
 
-Joao Pedrosa <joaopedrosa@gmail.com>
- * pt_BR translations
+ Stephane Roy <sroy@j2n.net>
+  * fr translations
 
-Andrey Fedoseev <andrey.fedoseev@gmail.com>
- * ru translations
+ Dotan Kamber <kamberd@yahoo.com>
+  * he translations
+
+ Szervác Attila <sas@321.hu>
+  * hu translations
+
+ Daichi Kawahata <daichik@users.sourceforge.net>
+  * ja translations
+
+ Piotr Maliński <admin@rk.edu.pl>
+  * pl translations
+
+ Adriano Winter Bess <awbess@gmail.com>
+  * pt_BR translations
+
+ Joao Pedrosa <joaopedrosa@gmail.com>
+  * pt_BR translations
+
+ Andrey Fedoseev <andrey.fedoseev@gmail.com>
+  * ru translations
+
+ Maxim Zenin <webmechanics@gmail.com>
+  * ru translations
+
 
 
 Other contributers (sorted by name):
