--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2006-05-06  Benedikt Meurer <benny@xfce.org>
+
+	* POTFILES.in: Add new files here.
+	* libexo-0.3.pot, *.po: Updated.
+	* de.po: Update the german translations.
+
 2006-08-06  Stavros Giannouris <stavrosg2002@freemail.gr>
 
 	* el.po: Greek translation update.
