--- a/po/de.po
+++ b/po/de.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.1.7svn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-05-06 00:05+0200\n"
-"PO-Revision-Date:  2006-05-06 00:10+0100\n"
+"POT-Creation-Date: 2006-05-06 23:11+0200\n"
+"PO-Revision-Date:  2006-05-06 22:50+0100\n"
 "Last-Translator: Benedikt Meurer <benny@xfce.org>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -144,12 +144,11 @@ msgstr "Die Breite, die für jedes Element verwendet wird"
 
 #: ../exo/exo-icon-view.c:728
 msgid "Layout mode"
-msgstr ""
+msgstr "Layout Modus"
 
 #: ../exo/exo-icon-view.c:729
-#, fuzzy
 msgid "The layout mode"
-msgstr "Der Auswahlmodus"
+msgstr "Der Layout Modus"
 
 #: ../exo/exo-icon-view.c:745
 msgid "Margin"
@@ -225,9 +224,8 @@ msgid "Whether the items in the view can be activated with single clicks"
 msgstr "Ob die Objekte bei einem einfachen Klick aktiviert werden sollen"
 
 #: ../exo/exo-icon-view.c:903 ../exo/exo-tree-view.c:186
-#, fuzzy
 msgid "Single Click Timeout"
-msgstr "Einfacher Klick"
+msgstr "Einfachklick-Verzögerung"
 
 #: ../exo/exo-icon-view.c:904 ../exo/exo-tree-view.c:187
 msgid ""
@@ -396,7 +394,8 @@ msgstr "  --name=identifier C Variablenname\n"
 msgid "  --build-list      Parse (name, file) pairs\n"
 msgstr "  --build-list      (Name, Datei) Paare parsen\n"
 
-#: ../exo-csource/main.c:248 ../exo-open/main.c:100
+#: ../exo-csource/main.c:248 ../exo-desktop-item-edit/main.c:138
+#: ../exo-open/main.c:100
 msgid ""
 "Copyright (c) 2005-2006\n"
 "        os-cillation e.K. All rights reserved.\n"
@@ -410,7 +409,8 @@ msgstr ""
 "Entwickelt von Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
 
-#: ../exo-csource/main.c:251 ../exo-open/main.c:103
+#: ../exo-csource/main.c:251 ../exo-desktop-item-edit/main.c:141
+#: ../exo-open/main.c:103
 #, c-format
 msgid ""
 "%s comes with ABSOLUTELY NO WARRANTY,\n"
@@ -425,10 +425,205 @@ msgstr ""
 "%s gefunden werden kann.\n"
 "\n"
 
-#: ../exo-csource/main.c:255 ../exo-open/main.c:107
+#: ../exo-csource/main.c:255 ../exo-desktop-item-edit/main.c:145
+#: ../exo-open/main.c:107
 #, c-format
 msgid "Please report bugs to <%s>.\n"
 msgstr "Bitte melden Sie Fehler an <%s>.\n"
+
+#. allocate the file chooser
+#: ../exo-desktop-item-edit/exo-die-command-entry.c:262
+msgid "Select an Application"
+msgstr "Anwendung auswählen"
+
+#: ../exo-desktop-item-edit/exo-die-command-entry.c:271
+#: ../exo-desktop-item-edit/exo-die-editor.c:634
+msgid "All Files"
+msgstr "Alle Dateien"
+
+#: ../exo-desktop-item-edit/exo-die-command-entry.c:276
+msgid "Executable Files"
+msgstr "Ausführbare Dateien"
+
+#: ../exo-desktop-item-edit/exo-die-command-entry.c:291
+msgid "Perl Scripts"
+msgstr "Perl Skripte"
+
+#: ../exo-desktop-item-edit/exo-die-command-entry.c:297
+msgid "Python Scripts"
+msgstr "Python Skripte"
+
+#: ../exo-desktop-item-edit/exo-die-command-entry.c:303
+msgid "Ruby Scripts"
+msgstr "Ruby Skripte"
+
+#: ../exo-desktop-item-edit/exo-die-command-entry.c:309
+msgid "Shell Scripts"
+msgstr "Shell Skripte"
+
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
+#: ../exo-desktop-item-edit/exo-die-editor.c:306
+msgid "_Name:"
+msgstr "_Name:"
+
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
+#: ../exo-desktop-item-edit/exo-die-editor.c:324
+msgid "C_omment:"
+msgstr "_Kommentar:"
+
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#: ../exo-desktop-item-edit/exo-die-editor.c:342
+msgid "Comm_and:"
+msgstr "_Befehl:"
+
+#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic conflicts
+#: ../exo-desktop-item-edit/exo-die-editor.c:359
+msgid "_URL:"
+msgstr "A_dresse:"
+
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
+#: ../exo-desktop-item-edit/exo-die-editor.c:377
+msgid "_Icon:"
+msgstr "S_ymbol:"
+
+#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link" dialog if no icon selected
+#. setup a label to tell that no icon was selected
+#: ../exo-desktop-item-edit/exo-die-editor.c:396
+#: ../exo-desktop-item-edit/exo-die-editor.c:1088
+msgid "No icon"
+msgstr "Kein Symbol"
+
+#: ../exo-desktop-item-edit/exo-die-editor.c:407
+msgid "Options:"
+msgstr "Optionen:"
+
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
+#: ../exo-desktop-item-edit/exo-die-editor.c:418
+msgid "Use _startup notification"
+msgstr "Benutze _Startup Notifikation"
+
+#: ../exo-desktop-item-edit/exo-die-editor.c:419
+msgid ""
+"Select this option to enable startup notification when the command is run "
+"from the file manager or the menu. Not every application supports startup "
+"notification."
+msgstr ""
+"Wählen Sie diese Option, um Rückmeldung zu erhalten, wenn der Befehl aus dem "
+"Dateimanager oder dem Menü heraus gestartet wird. Nicht jede Anwendung "
+"unterstützt dies."
+
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
+#: ../exo-desktop-item-edit/exo-die-editor.c:431
+msgid "Run in _terminal"
+msgstr "In _Terminal ausführen"
+
+#: ../exo-desktop-item-edit/exo-die-editor.c:432
+msgid "Select this option to run the command in a terminal window."
+msgstr ""
+"Ist diese Option aktiv, wird der oben angegebene Befehl in einem Terminal-"
+"Fenster ausgeführt."
+
+#: ../exo-desktop-item-edit/exo-die-editor.c:624
+msgid "Select an Icon"
+msgstr "Symbol auswählen"
+
+#: ../exo-desktop-item-edit/exo-die-editor.c:639
+msgid "Image Files"
+msgstr "Bilddateien"
+
+#. --- constants ---
+#: ../exo-desktop-item-edit/main.c:40
+msgid "Create Launcher"
+msgstr "Starter erstellen"
+
+#: ../exo-desktop-item-edit/main.c:40
+msgid "Create Link"
+msgstr "Verknüpfung erstellen"
+
+#: ../exo-desktop-item-edit/main.c:41
+msgid "Edit Launcher"
+msgstr "Starter ändern"
+
+#: ../exo-desktop-item-edit/main.c:41
+msgid "Edit Link"
+msgstr "Verknüpfung ändern"
+
+#: ../exo-desktop-item-edit/main.c:61
+msgid "Create a new desktop file in the given directory"
+msgstr ""
+
+#: ../exo-desktop-item-edit/main.c:62
+msgid "Type of desktop file to create (Application or Link)"
+msgstr ""
+
+#: ../exo-desktop-item-edit/main.c:63
+msgid "Preset name when creating a desktop file"
+msgstr ""
+
+#: ../exo-desktop-item-edit/main.c:64
+msgid "Preset comment when creating a desktop file"
+msgstr ""
+
+#: ../exo-desktop-item-edit/main.c:65
+msgid "Preset command when creating a launcher"
+msgstr ""
+
+#: ../exo-desktop-item-edit/main.c:66
+msgid "Preset URL when creating a link"
+msgstr ""
+
+#: ../exo-desktop-item-edit/main.c:67
+msgid "Preset icon when creating a desktop file"
+msgstr ""
+
+#: ../exo-desktop-item-edit/main.c:68
+msgid "Print version information and exit"
+msgstr "Programmversion anzeigen und beenden"
+
+#. initialize Gtk+
+#: ../exo-desktop-item-edit/main.c:110
+msgid "[FILE|FOLDER]"
+msgstr "[DATEI|ORDNER]"
+
+#: ../exo-desktop-item-edit/main.c:123
+#, fuzzy, c-format
+msgid "Failed to open display: %s"
+msgstr "Konnte »%s« nicht öffnen."
+
+#: ../exo-desktop-item-edit/main.c:152
+#, fuzzy
+msgid "No file/folder specified"
+msgstr "Kein Kommando angegeben"
+
+#. tell the user that we don't support the type
+#: ../exo-desktop-item-edit/main.c:210
+#, c-format
+msgid "Unsupported desktop file type '%s'"
+msgstr ""
+
+#. add the "Create"/"Save" button (as default)
+#: ../exo-desktop-item-edit/main.c:230
+msgid "C_reate"
+msgstr "_Erstellen"
+
+#. create failed, ask the user to specify a file name
+#: ../exo-desktop-item-edit/main.c:326
+msgid "Choose filename"
+msgstr "Dateinamen eingeben"
+
+#: ../exo-desktop-item-edit/main.c:380
+#, c-format
+msgid "Failed to create \"%s\"."
+msgstr "Konnte »%s« nicht erstellen."
+
+#: ../exo-desktop-item-edit/main.c:380
+#, c-format
+msgid "Failed to save \"%s\"."
+msgstr "Konnte »%s« nicht speichern."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:100
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:1
